changed the backdrop width and height, so that it doesnt go beyond the screen showing ugly scrollbars, it is fixed now

--- a/css/global.css
+++ b/css/global.css
@@ -30,8 +30,10 @@ html, body {
     position: absolute;
     top: 60px;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    max-height: 94vh;
+    width: 100%;
+    height: 100%;
 
     display: flex;
     align-items: center;
